add rearrangement.v / add comments to pynq

--- a/color_optimizer_demo/on_board_test/pynq_scripts/board_demo.ipynb
+++ b/color_optimizer_demo/on_board_test/pynq_scripts/board_demo.ipynb
@@ -59,8 +59,15 @@
     "import numpy as np\n",
     "from pynq import allocate\n",
     "print(hex(base.ip_dict['axi_dma_0']['phys_addr']))\n",
+    "\n",
+    "# this line of code set the base address of dma control / status registers\n",
+    "#     base.ip_dict['axi_dma_0']['phys_addr'] : Query the physical address of the DMA axi_dma_0\n",
+    "#     0x60: The size of the DMA axi_dma_0's control / status registers\n",
     "# please confirm the address of dma is set  correctly\n",
     "axi_dma = MMIO(hex(base.ip_dict['axi_dma_0']['phys_addr']), 0x60)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Read the status and control logic of dma\n",
     "# print(hex(axi_dma.read(0)))     #MM2S control\n",
@@ -86,46 +93,64 @@
     "_4k_byte = 3840 * 2160 * 3\n",
     "_1k_byte = 1920 * 1080 * 3\n",
     "\n",
+    "# get the start address of the input 4K frame\n",
     "f = hdmi_in.readframe()\n",
+    "\n",
+    "# allocate and get the start address for the output 1080p frame\n",
     "output_buffer = allocate(shape=(1080, 1920, 3),dtype=np.uint8)\n",
-    "# write\n",
-    "axi_dma.write(0, 1)\n",
-    "axi_dma.write(0x1c, 0)\n",
-    "axi_dma.write(0x18, f.device_address)\n",
-    "axi_dma.write(0x28, _4k_byte)\n",
     "\n",
-    "# read\n",
-    "axi_dma.write(0x30, 1)\n",
-    "axi_dma.write(0x4c, 0)\n",
-    "axi_dma.write(0x48, output_buffer.device_address)\n",
-    "axi_dma.write(0x58, _1k_byte)\n",
     "\n",
-    "while hex(axi_dma.read(4)) != \"0x1002\":\n",
-    "              pass\n",
+    "# Read a 4K frame from DDR to PL, set signal from low offset to high offset to prevent masking\n",
+    "axi_dma.write(0, 1) # set Read channel to be active\n",
+    "axi_dma.write(0x1c, 0) # set Read channel to be active\n",
+    "axi_dma.write(0x18, f.device_address) # set the start address of the input frame\n",
+    "axi_dma.write(0x28, _4k_byte) # set the length of the input frame\n",
+    "\n",
+    "# Write a 1080p frame from PL to DDR, set signal from low offset to high offset to prevent masking\n",
+    "axi_dma.write(0x30, 1) # set Write channel to be active\n",
+    "axi_dma.write(0x4c, 0) # set Write channel to be active\n",
+    "axi_dma.write(0x48, output_buffer.device_address) # set the start address of the output frame\n",
+    "axi_dma.write(0x58, _1k_byte) # set the length of the output frame\n",
+    "\n",
+    "\n",
+    "# # wait for Read channel to finish (check the registers with 0x04 shift)\n",
+    "# # Since their will be leftover data in the PL pipeline, it will finish earlier than the Write channel\n",
+    "# while hex(axi_dma.read(4)) != \"0x1002\":\n",
+    "#               pass\n",
     "\n",
     "\n",
     "import time\n",
     "num_frames = 1200\n",
     "start = time.time()\n",
     "for _ in range(num_frames):\n",
+    "\n",
+    "    # get the start address of the next input 4K frame\n",
     "    f = hdmi_in.readframe()\n",
-    "    \n",
+    "\n",
+    "    # wait for Read channel to finish (check the registers with 0x04 shift)\n",
+    "    # Since their will be leftover data in the PL pipeline, it will finish earlier than the Write channel\n",
     "    while hex(axi_dma.read(4)) != \"0x1002\":\n",
     "              pass\n",
-    "    # write\n",
+    "    \n",
+    "    # Since current Read channel has finished, we can start the next Reading for the next frame, it can help flush the PL pipeline\n",
+    "    # and make sure the current write channel will finish. (Receive the leftover data in the pipeline)\n",
     "    axi_dma.write(0, 1)\n",
     "    axi_dma.write(0x1c, 0)\n",
     "    axi_dma.write(0x18, f.device_address)\n",
     "    axi_dma.write(0x28, _4k_byte)\n",
-    "    \n",
+    "\n",
+    "\n",
+    "    # wait for Write channel to finish (check the registers with 0x34 shift)\n",
     "    while hex(axi_dma.read(0x34)) != \"0x1002\":\n",
     "              pass\n",
     "        \n",
-    "        \n",
+    "    \n",
+    "    # Since current Write channel has finished, the output frame is ready, we can send it to the HDMI output\n",
     "    hdmi_out.writeframe(output_buffer)\n",
     "    \n",
     "\n",
-    "    # read\n",
+    "    # Since current output frame has been sent to HDMI output, it is not valid anymore, we can start writing the next frame\n",
+    "    # to its address. \n",
     "    axi_dma.write(0x30, 1)\n",
     "    axi_dma.write(0x4c, 0)\n",
     "    axi_dma.write(0x48, output_buffer.device_address)\n",
