add pynq comment

--- a/fpga/pynq_scripts/board_demo.ipynb
+++ b/fpga/pynq_scripts/board_demo.ipynb
@@ -146,6 +146,9 @@
     "        \n",
     "    \n",
     "    # Since current Write channel has finished, the output frame is ready, we can send it to the HDMI output\n",
+    "    # this line is triggering the VDMA to send the frame to HDMI output, HDMI output will accept at 60 fps, and will\n",
+    "    # stall VDMA if VDMA produce higher data rate.\n",
+    "    # This line is of blocking and will wait for the HDMI output to finish and it can control the frame rate (60 fps)\n",
     "    hdmi_out.writeframe(output_buffer)\n",
     "    \n",
     "\n",
