update pynq scripts

--- a/fpga/pynq_scripts/board_demo.ipynb
+++ b/fpga/pynq_scripts/board_demo.ipynb
@@ -28,7 +28,7 @@
     "from pynq.overlays.base import BaseOverlay\n",
     "from pynq.lib.video import *\n",
     "\n",
-    "base = BaseOverlay(\"hls.bit\")\n",
+    "base = BaseOverlay(\"base.bit\")\n",
     "hdmi_in = base.video.hdmi_in\n",
     "hdmi_out = base.video.hdmi_out\n",
     "\n",
@@ -39,7 +39,6 @@
     "hdmi_out_mode = copy.copy(hdmi_in.mode)\n",
     "print(hdmi_in.mode)\n",
     "print(hdmi_out_mode)\n",
-    "\n",
     "hdmi_out_mode.width = 1920\n",
     "hdmi_out_mode.height = 1080\n",
     "hdmi_out_mode.stride = 1920 * 3\n",
@@ -51,30 +50,7 @@
     "hdmi_in.start()\n",
     "hdmi_out.start()\n",
     "\n",
-    "hdmi_in.tie(hdmi_out)\n",
-    "\n",
-    "\n",
-    "# start dma\n",
-    "from pynq import MMIO\n",
-    "import numpy as np\n",
-    "from pynq import allocate\n",
-    "print(hex(base.ip_dict['axi_dma_0']['phys_addr']))\n",
-    "\n",
-    "# this line of code set the base address of dma control / status registers\n",
-    "#     base.ip_dict['axi_dma_0']['phys_addr'] : Query the physical address of the DMA axi_dma_0\n",
-    "#     0x60: The size of the DMA axi_dma_0's control / status registers\n",
-    "# please confirm the address of dma is set  correctly\n",
-    "axi_dma = MMIO(hex(base.ip_dict['axi_dma_0']['phys_addr']), 0x60)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Read the status and control logic of dma\n",
-    "# print(hex(axi_dma.read(0)))     #MM2S control\n",
-    "# print(hex(axi_dma.read(4)))     #MM2S status\n",
-    "\n",
-    "# print(hex(axi_dma.read(0x30)))  #S2MM control\n",
-    "# print(hex(axi_dma.read(0x34)))  #S2MM status"
+    "hdmi_in.tie(hdmi_out)"
    ]
   },
   {
@@ -86,74 +62,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_4k_byte = 3840 * 2160 * 3\n",
+    "# start on dma passthrough \n",
+    "from pynq import MMIO\n",
+    "import numpy as np\n",
+    "from pynq import allocate\n",
+    "print(hex(base.ip_dict['axi_dma_0']['phys_addr']))\n",
+    "axi_dma = MMIO(0x80040000, 0x60)\n",
+    "# Read the control logic of dma\n",
+    "print(hex(axi_dma.read(0)))     #MM2S control\n",
+    "print(hex(axi_dma.read(4)))     #MM2S status\n",
+    "\n",
+    "print(hex(axi_dma.read(0x30)))  #S2MM control\n",
+    "print(hex(axi_dma.read(0x34)))  #S2MM status\n",
+    "h_4k_byte = 3840 * 1080 * 3\n",
     "_1k_byte = 1920 * 1080 * 3\n",
     "\n",
-    "# get the start address of the input 4K frame\n",
+    "# send first frame\n",
     "f = hdmi_in.readframe()\n",
-    "\n",
-    "# allocate and get the start address for the output 1080p frame\n",
     "output_buffer = allocate(shape=(1080, 1920, 3),dtype=np.uint8)\n",
+    "# memory read\n",
+    "axi_dma.write(0, 1)\n",
+    "axi_dma.write(0x1c, 0)\n",
+    "axi_dma.write(0x18, f.device_address)\n",
+    "axi_dma.write(0x28, h_4k_byte)\n",
     "\n",
+    "# memory write\n",
+    "axi_dma.write(0x30, 1)\n",
+    "axi_dma.write(0x4c, 0)\n",
+    "axi_dma.write(0x48, output_buffer.device_address)\n",
+    "axi_dma.write(0x58, _1k_byte)\n",
     "\n",
-    "# Read a 4K frame from DDR to PL, set signal from low offset to high offset to prevent masking\n",
-    "axi_dma.write(0, 1) # set Read channel to be active\n",
-    "axi_dma.write(0x1c, 0) # set Read channel to be active\n",
-    "axi_dma.write(0x18, f.device_address) # set the start address of the input frame\n",
-    "axi_dma.write(0x28, _4k_byte) # set the length of the input frame\n",
+    "print(f.shape)\n",
     "\n",
-    "# Write a 1080p frame from PL to DDR, set signal from low offset to high offset to prevent masking\n",
-    "axi_dma.write(0x30, 1) # set Write channel to be active\n",
-    "axi_dma.write(0x4c, 0) # set Write channel to be active\n",
-    "axi_dma.write(0x48, output_buffer.device_address) # set the start address of the output frame\n",
-    "axi_dma.write(0x58, _1k_byte) # set the length of the output frame\n",
+    "while hex(axi_dma.read(4)) != \"0x1002\":\n",
+    "              pass\n",
     "\n",
-    "\n",
-    "# # wait for Read channel to finish (check the registers with 0x04 shift)\n",
-    "# # Since their will be leftover data in the PL pipeline, it will finish earlier than the Write channel\n",
-    "# while hex(axi_dma.read(4)) != \"0x1002\":\n",
-    "#               pass\n",
-    "\n",
-    "\n",
+    "# send following frames\n",
     "import time\n",
-    "num_frames = 1200\n",
+    "numframes = 1000\n",
     "start = time.time()\n",
-    "for _ in range(num_frames):\n",
-    "\n",
-    "    # get the start address of the next input 4K frame\n",
+    "for i in range(numframes):\n",
     "    f = hdmi_in.readframe()\n",
-    "\n",
-    "    # wait for Read channel to finish (check the registers with 0x04 shift)\n",
-    "    # Since their will be leftover data in the PL pipeline, it will finish earlier than the Write channel\n",
+    "    \n",
     "    while hex(axi_dma.read(4)) != \"0x1002\":\n",
     "              pass\n",
-    "    \n",
-    "    # Since current Read channel has finished, we can start the next Reading for the next frame, it can help flush the PL pipeline\n",
-    "    # and make sure the current write channel will finish. (Receive the leftover data in the pipeline)\n",
+    "    # write\n",
     "    axi_dma.write(0, 1)\n",
     "    axi_dma.write(0x1c, 0)\n",
     "    axi_dma.write(0x18, f.device_address)\n",
-    "    axi_dma.write(0x28, _4k_byte)\n",
-    "\n",
-    "\n",
-    "    # wait for Write channel to finish (check the registers with 0x34 shift)\n",
+    "    axi_dma.write(0x28, h_4k_byte)\n",
+    "    \n",
     "    while hex(axi_dma.read(0x34)) != \"0x1002\":\n",
     "              pass\n",
     "        \n",
-    "    \n",
-    "    # Since current Write channel has finished, the output frame is ready, we can send it to the HDMI output\n",
-    "    # this line is triggering the VDMA to send the frame to HDMI output, HDMI output will accept at 60 fps, and will\n",
-    "    # stall VDMA if VDMA produce higher data rate.\n",
-    "    # This line is of blocking and will wait for the HDMI output to finish and it can control the frame rate (60 fps)\n",
     "    hdmi_out.writeframe(output_buffer)\n",
     "    \n",
     "\n",
-    "    # Since current output frame has been sent to HDMI output, it is not valid anymore, we can start writing the next frame\n",
-    "    # to its address. \n",
+    "    # read\n",
     "    axi_dma.write(0x30, 1)\n",
     "    axi_dma.write(0x4c, 0)\n",
     "    axi_dma.write(0x48, output_buffer.device_address)\n",
@@ -163,7 +132,7 @@
     "    \n",
     "    \n",
     "end = time.time()\n",
-    "print(\"Frames per second:  \" + str(num_frames / (end - start)))"
+    "print(\"Frames per second:  \" + str(numframes / (end - start)))"
    ]
   },
   {
@@ -180,10 +149,9 @@
    "outputs": [],
    "source": [
     "import PIL.Image\n",
-    "import numpy as np\n",
-    "img = PIL.Image.fromarray(output_buffer)\n",
-    "img.save(\"board.png\")\n",
-    "np.save(\"board.npy\", output_buffer)\n",
+    "img = PIL.Image.fromarray(output_buffer[:,:,::-1])\n",
+    "img.save(\"board_scene.jpg\")\n",
+    "np.save(\"board_scene.npy\", output_buffer[:,:,::-1])\n",
     "img"
    ]
   },
@@ -203,13 +171,6 @@
     "hdmi_out.close()\n",
     "hdmi_in.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
