--- a/fpga/pynq_scripts/host_setting.ipynb
+++ b/fpga/pynq_scripts/host_setting.ipynb
@@ -28,7 +28,7 @@
     "from pynq.overlays.base import BaseOverlay\n",
     "from pynq.lib.video import *\n",
     "\n",
-    "base = BaseOverlay(\"hls.bit\")\n",
+    "base = BaseOverlay(\"base.bit\")\n",
     "hdmi_in = base.video.hdmi_in\n",
     "hdmi_out = base.video.hdmi_out\n",
     "\n",
@@ -39,7 +39,6 @@
     "hdmi_out_mode = copy.copy(hdmi_in.mode)\n",
     "print(hdmi_in.mode)\n",
     "print(hdmi_out_mode)\n",
-    "\n",
     "hdmi_out_mode.width = 1920\n",
     "hdmi_out_mode.height = 1080\n",
     "hdmi_out_mode.stride = 1920 * 3\n",
@@ -51,23 +50,7 @@
     "hdmi_in.start()\n",
     "hdmi_out.start()\n",
     "\n",
-    "hdmi_in.tie(hdmi_out)\n",
-    "\n",
-    "\n",
-    "# start dma\n",
-    "from pynq import MMIO\n",
-    "import numpy as np\n",
-    "from pynq import allocate\n",
-    "print(hex(base.ip_dict['axi_dma_0']['phys_addr']))\n",
-    "# please confirm the address of dma is set  correctly\n",
-    "axi_dma = MMIO(hex(base.ip_dict['axi_dma_0']['phys_addr']), 0x60)\n",
-    "\n",
-    "# Read the status and control logic of dma\n",
-    "# print(hex(axi_dma.read(0)))     #MM2S control\n",
-    "# print(hex(axi_dma.read(4)))     #MM2S status\n",
-    "\n",
-    "# print(hex(axi_dma.read(0x30)))  #S2MM control\n",
-    "# print(hex(axi_dma.read(0x34)))  #S2MM status"
+    "hdmi_in.tie(hdmi_out)"
    ]
   },
   {
